# plutus-halo2-poc

./: README.md  cabal.project  flake.nix
plutus-halo2/: plutus-halo2.cabal
plutus-halo2/src/Plutus/Crypto/: BlsUtils.hs  Halo2.hs
plutus-halo2/src/Plutus/Crypto/Halo2/: Transcript.hs
plutus-misc/: plutus-misc.cabal
plutus-misc/src/: Test.hs
