cabal-version: 3.0
name: plutus-misc
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "A plutus halo2 test lib"
build-type: Simple

library
    exposed-modules:  Test
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    -- , plutus-tx ^>= 1.9
                    -- , plutus-core ^>= 1.9
                    , plutus-tx
                    , plutus-core
                    , plutus-halo2
                    , bytestring
                    -- , plutus-crypto